--- a/_includes/Action/Promote/collections_list.html
+++ b/_includes/Action/Promote/collections_list.html
@@ -3,7 +3,9 @@
 <div class="relative border bg-neutral-50 border-2 border-neutral-200 p-3 rounded-xl" data-id="{{ data.id }}" data-ref="{{ data.product_ref }}">
   <div class="flex items-center mb-3 justify-between">
     <div class="flex items-center">
-      <div class="bg-gray-200 rounded-lg w-10 h-10 flex place-center mr-3"><span class="font-bold text-2xl">B</span></div>
+      <div class="bg-gray-200 rounded-lg w-10 h-10 flex place-center mr-3">
+        <span class="font-bold text-2xl">{{ data.title | slice: 0, 1 | upcase }}</span>
+      </div>
       <div class="">
         <h2 class="text-base font-bold">{{ data.title }}</h2>
         <span class="text-gray-500 flex items-center text-xs">
