--- a/_includes/default/Header.html
+++ b/_includes/default/Header.html
@@ -1,13 +1,13 @@
-<div class="fixed border z-8 max-w-580 mx-auto p-2 rounded-xl border-solid top-2 inset-x-2 border-transparent" data-js="container-header">
+<div class="fixed border z-8 max-w-[580px] mx-auto p-2 rounded-xl border-solid top-2 inset-x-2 border-transparent" data-js="container-header">
   <div class="flex justify-between" data-js="header-profile">
-    <button class="inline-flex place-center w-10 h-10 rounded-lg bg-gray-900 cursor-pointer text-white"
+    <button class="inline-flex justify-center items-center w-10 h-10 rounded-lg bg-gray-900 cursor-pointer text-white"
       data-js="{% if page.url == '/' %}header_button--share{% else %}header_button--back{% endif %}">
       <svg class="w-5 h-5 fill-current" width="100%" height="100%"><use xlink:href="{% if page.url == '/' %}#i.share{% else %}#i.back{% endif %}"></use></svg>
     </button>
     <a href="/" class="hidden" data-js="header_button--profile">
       <img class="w-10 h-10 rounded-full" src="{{ site.logo }}" />
     </a>
-    <a class="inline-flex place-center w-10 h-10 rounded-lg bg-gray-900 cursor-pointer text-white" href="/search">
+    <a class="inline-flex justify-center items-center w-10 h-10 rounded-lg bg-gray-900 cursor-pointer text-white" href="/search">
       <svg class="w-5 h-5 fill-current" width="100%" height="100%"><use xlink:href="#i.search"></use></svg>
     </a>
   </div>
