--- a/_includes/Action/Promote/outfit.html
+++ b/_includes/Action/Promote/outfit.html
@@ -1,5 +1,5 @@
 {% assign data = include.product_data %}
-{% assign database_outfit = site.data.database_outfits[data.file_ref] %}
+{% assign database_outfit = site.data.database.outfits[data.file_ref] %}
 
 <section class="outfit-card relative border bg-white border-2 border-neutral-200 p-3 rounded-xl shadow-sm">
   <div class="flex items-center justify-between mb-3">
