--- a/_layouts/collection_list.html
+++ b/_layouts/collection_list.html
@@ -11,7 +11,7 @@ layout: default
 </div>
 
 <div class="grid grid-cols-2 gap-3 sm:grid-cols-3">
-  {% assign product_file = site.data.database_products[page.product_ref] %}
+  {% assign product_file = site.data.database.products[page.product_ref] %}
 
   {% if product_file.size > 0 %}
     {% for product in product_file %} {% include productItems.html product=product %} {% endfor %}
