--- a/_layouts/outfit_list.html
+++ b/_layouts/outfit_list.html
@@ -26,12 +26,12 @@ layout: default
     <h2 class="text-lg font-semibold text-gray-800 mb-4">Products in this outfit</h2>
     
     <div class="grid grid-cols-2 gap-3 sm:grid-cols-3">
-      {% assign product_file = site.data.database_outfits[page.outfit_ref].products %}
+      {% assign product_file = site.data.database.outfits[page.outfit_ref].products %}
 
       {% if product_file.size > 0 %}
 
         {% for item in product_file %}
-          {% assign product = site.data.database_products[item.source] | where: "code", item.code | first %}
+          {% assign product = site.data.database.products[item.source] | where: "code", item.code | first %}
           {% include productItems.html product=product %}
         {% endfor %}
 
