--- a/_includes/productItems.html
+++ b/_includes/productItems.html
@@ -1,4 +1,4 @@
-<div class="relative rounded-xl overflow-hidden p-1 border bg-white border-gray-200 hover:border-gray-300" id="{{ product.code }}">
+<div class="relative rounded-xl overflow-hidden p-1 border bg-white border-gray-200 hover:border-gray-300 scroll-mt-20" id="{{ product.code }}">
   <div class="relative">
     <div class="card-deco-img relative overflow-hidden aspect-square rounded-lg bg-gray-100">
       <img class="object-cover" alt="{{ product.name }}" src="{{ product.image | relative_url }}" loading="lazy" />
